--- a/index.html
+++ b/index.html
@@ -1,72 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pizzaria Platzi</title>
+    <meta name="description"
+        content="Pizzaria Platzi. Sabores incomparáveis, ingredientes de qualidade e compromisso de entrega.">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Cardápio</a>
-            <a href="#">Pedidos</a>
-        </nav>
+    <header class="header">
+        <div class="container">
+            <nav class="navbar navbar-expand navbar-light float-right">
+                <button class="navbar-toggler border-light" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#">Cardápio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="btn btn-success" role="button " href="#">Peça online</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
 
-    <img src="assets/logo.png" alt="Logo Platzi Pizzaria" />
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati neque minima maiores! Sed ad culpa ipsa, doloribus impedit tenetur incidunt, quam ex deleniti quibusdam voluptatum excepturi voluptates! Aperiam, sequi numquam!</p>
-    <a href="#">Peça online</a>
-    <section class="products">
-        <div>
-            <img src="assets/sabor.png" alt="Sabor incomparável" />
-            <h1>Sabor incomparável</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus iste, unde harum cupiditate quod asperiores quam mollitia molestiae sapiente voluptate sed velit repudiandae perferendis omnis.</p>
-            <a href="">Saiba mais</a>    
-        </div>
-        <div>
-            <img src="assets/ingredientes.png" alt="Ingredientes" />
-            <h1>Ingredientes de qualidade</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus iste, unde harum cupiditate quod asperiores quam mollitia molestiae sapiente voluptate sed velit repudiandae perferendis omnis.</p>
-            <a href="">Saiba mais</a>    
-        </div>
-        <div>
-            <img src="assets/compromisso.png" alt="Compromisso" />
-            <h1>Compromisso de entrega</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus iste, unde harum cupiditate quod asperiores quam mollitia molestiae sapiente voluptate sed velit repudiandae perferendis omnis.</p>
-            <a href="">Saiba mais</a>    
-        </div>
-    </section>
+    <main>
+        <section class="banner-principal">
+            <div class="container">
+                <div class="row col-12 justify-content-center mt-5">
+                    <img class="logomarca mt-5 mt-md-4" src="assets/logo.png" class="img-fluid"
+                        alt="Logo Platzi Pizzaria" />
+                    <p class="text-light text-center my-4 my-md-4 px-md-5">Lorem, ipsum dolor sit amet consectetur
+                        adipisicing elit. Obcaecati neque minima maiores! Sed ad culpa ipsa, doloribus impedit tenetur
+                        incidunt!</p>
+                    <a class="btn btn-success" role="button " href="#">Peça online</a>
+                </div>
+            </div>
+        </section>
 
-    <section class="testimonials">
-        <div class="copy">
-            <h2>Nosso compromisso</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptas laboriosam porro a voluptatem ad officia quae, consequuntur sequi, veritatis asperiores saepe modi eos. Eveniet hic ratione perferendis enim aliquid?
-            </p>
-            <p>Frank Hardy</p>
-            <p>CEO and Founder</p>
-        </div>
-        <img src="assets/client1.png" alt="Frank Hardy" />
-    </section>
+        <section class="products pt-5 pb-5">
+            <div class="container">
+                <div class="card-deck">
+                    <div class="card align-items-center py-4">
+                        <img src="assets/sabor.png" class="card-img-top" alt="Sabor" style="width: 7rem;">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Sabor <br><span>Incomparável</span></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus
+                                iste.</p>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="card-link text-dark">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="card align-items-center py-4">
+                        <img src="assets/ingredientes.png" class="card-img-top" alt="Ingredientes" style="width: 7rem;">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Ingredientes de <br><span>Alta qualidade</span></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus
+                                iste.</p>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="card-link text-dark">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="card align-items-center py-4">
+                        <img src="assets/compromisso.png" class="card-img-top" alt="Compromisso" style="width: 7rem;">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Compromisso <br><span>de Entrega</span></h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt ratione at eum incidunt delectus
+                                iste.</p>
+                        </div>
+                        <div class="card-footer bg-transparent">
+                            <a href="#" class="card-link text-dark">Saiba mais</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <section class="testimonials">
+            <div class="container">
+                <div class="row py-5">
+                    <div class="testimonials-copy col-12 col-md-6 my-auto pl-md-5">
+                        <h2 class="text-light py-4">Nosso compromisso</h2>
+                        <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptas laboriosam porro a voluptatem
+                            ad officia quae, consequuntur sequi, veritatis asperiores saepe modi eos. Eveniet hic ratione
+                            perferendis enim aliquid?"
+                        </p>
+                        <h5 class="text-light text-uppercase mb-0">Frank Hardy</p>
+                        <h6>CEO and Founder</p>
+                    </div>
+                    <div class="testimonials-photo col-12 col-md-6 mt-4 mt-md-0 text-center">
+                        <img src="assets/client1.png" alt="Frank Hardy" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <footer>
-        <div class="links">
-            <a href="">Status</a>
-            <a href="">Política de privacidade</a>
-            <a href="">Contate-nos</a>
-        </div>
+        <section class="footer-logo">
+            <div class="container">
+                <div class="logo-footer text-center py-5">
+                    <img class="" src="assets/logo-dark.png" class="img-fluid" alt="Logo Platzi Pizzaria" />
+                </div>
+            </div>
+        </section>
+    </main>
 
-        <div class="social-links">
-            <a href="">Twitter</a>
-            <a href="">Facebook</a>
-            <a href="">Instagram</a>
+    <footer class="bg-light">
+        <div class="container">
+            <div class="row py-3">
+                <div class="links col-12 text-center">
+                    <a href="#" class="text-secondary mx-3">Status</a>
+                    <a href="#" class="text-secondary mx-3">Política de privacidade</a>
+                    <a href="#" class="text-secondary mx-3">Contate-nos</a>
+                </div>
+
+            </div>
         </div>
     </footer>
+    
 
-
-
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
